# model-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
notes/.obsidian/: workspace.json
notes/model_manager/: Blueprint.canvas  Intro.md
notes/model_manager/.obsidian/: workspace.json
notes/model_manager/CivitAI/: model.md
notes/model_manager/Functions/: Danbooru Tag Dictionary.md  safesensors file info extraction.md  safetensors file info extraction.md
notes/model_manager/Logic/: Main.canvas  Pre-requirements info for program.md  Program lifecycle.canvas
notes/model_manager/Logic/tag_system/: tag_system_design.canvas
src/flutter-ui/: pubspec.yaml
src/model_manager/: config.py  main.py  settings.py
src/model_manager/api/: api.py
src/model_manager/api/v1/: __init__.py
src/model_manager/api/v1/civitai/: __init__.py  extra_networks.py
src/model_manager/api/v1/local/: __init__.py  checkpoints.py
src/model_manager/db/: __init__.py  local_models.py  tables.py
src/model_manager/gradio_ui/: __init__.py  local_tab.py
src/model_manager/utils/: civitai.py  local.py  model.py
tests/: test_config.py
tests/db/: test_card.py
tests/utils/: test_local.py  test_model.py
vue-project/: package-lock.json  package.json
vue-project/src/: App.vue  main.ts
vue-project/src/components/: VuetifyGrid.vue
vue-project/src/router/: index.ts
vue-project/src/views/: Models.vue
